# polymeasure

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: NASA_Exoplanet_Composite.parquet  test.py  test_old.py
src/polymeasure/: __init__.py  core.py  core_experiment.py  standard.py
tests/: test.py
