[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymeasure"
version = "0.1.2"
authors = [
  { name="Josh Grant", email="jagmanjg@gmail.com" },
]
description = "A python analysis package for building SQL expressions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jgrant-the-giant/polymeasure"
"Bug Tracker" = "https://github.com/jgrant-the-giant/polymeasure/issues"